# interface/rest_api/openapi_types.gen.go
@@ -7,16 +7,10 @@ import (
 	openapi_types "github.com/deepmap/oapi-codegen/pkg/types"
 )
 
-// Defines values for V1UploadAssetParamsLocation.
+// Defines values for V1AssetLocation.
 const (
-	V1UploadAssetParamsLocationBLOG     V1UploadAssetParamsLocation = "blog"
-	V1UploadAssetParamsLocationOBSIDIAN V1UploadAssetParamsLocation = "obsidian"
-)
-
-// Defines values for V1RedirectToPublicLinkParamsLocation.
-const (
-	V1RedirectToPublicLinkParamsLocationBLOG     V1RedirectToPublicLinkParamsLocation = "blog"
-	V1RedirectToPublicLinkParamsLocationOBSIDIAN V1RedirectToPublicLinkParamsLocation = "obsidian"
+	V1AssetLocationBlog     V1AssetLocation = "blog"
+	V1AssetLocationObsidian V1AssetLocation = "obsidian"
 )
 
 // Error defines model for Error.
@@ -33,16 +27,13 @@ type TempAsset struct {
 	Url string `json:"url"`
 }
 
+// V1AssetLocation defines model for V1AssetLocation.
+type V1AssetLocation string
+
 // V1UploadAssetMultipartBody defines parameters for V1UploadAsset.
 type V1UploadAssetMultipartBody struct {
 	Image *openapi_types.File `json:"image,omitempty"`
 }
-
-// V1UploadAssetParamsLocation defines parameters for V1UploadAsset.
-type V1UploadAssetParamsLocation string
-
-// V1RedirectToPublicLinkParamsLocation defines parameters for V1RedirectToPublicLink.
-type V1RedirectToPublicLinkParamsLocation string
 
 // V1UploadAssetMultipartRequestBody defines body for V1UploadAsset for multipart/form-data ContentType.
 type V1UploadAssetMultipartRequestBody V1UploadAssetMultipartBody
